welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: identifier expected but '(' found.
def (boucle()){
    ^