welcome.lessons.welcome.variables.RunFour.scala.code
var nbBis=0
def (boucle()){
while(!estSurBiscuit()){
  avance()
  nbBis=nbBis+1
  if (nbBis==4){
  prendBiscuit()
}else{
    boucle()
  }
}
}
